fix: Increase padding for priorityPill and statusPill for better visual consistency

--- a/src/components/orders-table/list-order-details.scss
+++ b/src/components/orders-table/list-order-details.scss
@@ -68,7 +68,7 @@
   display: inline-block;
   background-color: colors.$gray-20;
   border-radius: layout.$spacing-05;
-  padding: layout.$spacing-01;
+  padding: layout.$spacing-02;
   text-align: center;
 
   &[data-urgency='routine'] {
@@ -85,7 +85,7 @@
   display: inline-block;
   background-color: colors.$gray-20;
   border-radius: layout.$spacing-03;
-  padding: layout.$spacing-01;
+  padding: layout.$spacing-02;
   padding-inline: layout.$spacing-03;
   text-align: center;
 
